Make Linkedin badges

--- a/index.html
+++ b/index.html
@@ -34,6 +34,33 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <style>
+        .LI-name-container.LI-row {
+            margin-left: 0 !important;
+        }
+        .LI-col {
+            padding-left: 15px !important;
+        }
+        .LI-footer.LI-row {
+            text-align: left !important;
+        }
+        .LI-more-info li {
+            text-align: left !important;
+        }
+        .LI-col.LI-header {
+            text-align: left;
+            padding-left: 0 !important;
+        }
+        .gowtham-linkedin .LI-name-container.LI-row {
+            background: white;
+        }
+        .gowtham-linkedin .LI-badge-container-horizontal-light {
+            background: white;
+        }
+        .gowtham-linkedin .LI-footer.LI-row {
+            background: white;
+        }
+    </style>
 </head>
 
 <body id="page-top">
@@ -191,7 +218,16 @@
                     <a href="https://plus.google.com/u/0/102102076709739928402" target="_blank"><i class="fa fa-google-plus"></i></a>
                 </li>
             </ul>
-            <h2>Reach out to us at indicappstudios@gmail.com</h2>
+            <div class="col-md-12">
+                <h2>Reach out to us at indicappstudios@gmail.com</h2>
+            </div>
+            <div class="col-md-6">
+                <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="harshanooka"><a class="LI-simple-link" href='https://www.linkedin.com/in/harshanooka?trk=profile-badge'>Harsha Nooka</a></div>
+            </div>
+            <div class="gowtham-linkedin col-md-6">
+                <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="gowtham-hosur-68ba6935"><a class="LI-simple-link" href='https://uk.linkedin.com/in/gowtham-hosur-68ba6935?trk=profile-badge'>Gowtham Hosur</a></div>
+            </div>
+
         </div>
     </section>
 
@@ -223,6 +259,9 @@
 
     <!-- Theme JavaScript -->
     <script src="js/new-age.min.js"></script>
+
+    <!--Linkedin badge-->
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
 </body>
 
