--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
         .gowtham-linkedin .LI-footer.LI-row {
             background: white;
         }
+        .device-mockup{
+            width: 88%;
+            margin: auto;
+            float: right;
+        }
+        .device-mockup.galaxy_s5, .device-mockup.galaxy_s5.portrait{
+            padding-bottom: 157.188862%;
+        }
     </style>
 </head>
 
@@ -100,7 +108,7 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>Guess the Word Desi is a desi puzzle game developed by Indic App studios that will help you showcase your language proficiency and your picture identifying skills.</h1>
+                            <h1>4 Pics 1 Word Puzzle game in Indian Languages:<br/><br/>Hindi, Telugu & Kannada</h1>
                             <a href="#download" class="btn btn-outline btn-xl page-scroll">Play Now for Free!</a>
                         </div>
                     </div>
@@ -111,7 +119,7 @@
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/home_screen.png" class="img-responsive" alt="">
+                                    <img src="img/game_screen.png" class="img-responsive" alt="">
                                 </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -129,7 +137,7 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <h2 class="section-heading">Discover what all the buzz is about!</h2>
-                    <p>Our app is available on any mobile device! Download now to get started!</p>
+                    <p>Our app is available on android! Download now to get started!</p>
                     <div class="badges">
                         <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
 <!--
