--- a/index.html
+++ b/index.html
@@ -63,10 +63,20 @@
         .device-mockup{
             width: 88%;
             margin: auto;
-            float: right;
+        }
+        @media (min-width: 768px) {
+            .device-mockup{
+                float: right;
+            }
         }
         .device-mockup.galaxy_s5, .device-mockup.galaxy_s5.portrait{
             padding-bottom: 157.188862%;
+        }
+        .LI-profile-badge{
+            margin-top: 15px;
+        }
+        .reach-out{
+            word-wrap: break-word;
         }
     </style>
 </head>
@@ -227,7 +237,7 @@
                 </li>
             </ul>
             <div class="col-md-12">
-                <h2>Reach out to us at indicappstudios@gmail.com</h2>
+                <h2 class="reach-out">Reach out to us at indicappstudios@gmail.com</h2>
             </div>
             <div class="col-md-6">
                 <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="harshanooka"><a class="LI-simple-link" href='https://www.linkedin.com/in/harshanooka?trk=profile-badge'>Harsha Nooka</a></div>
