Play store link

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <link rel="stylesheet" href="lib/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="lib/device-mockups/device-mockups.min.css">
 
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <!-- Theme CSS -->
     <link href="css/new-age.min.css" rel="stylesheet">
 
@@ -149,7 +152,7 @@
                     <h2 class="section-heading">Discover what all the buzz is about!</h2>
                     <p>Our app is available on android! Download now to get started!</p>
                     <div class="badges">
-                        <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
+                        <a class="badge-link" href="https://play.google.com/store/apps/details?id=com.ionicframework.apptelugu4p1w586229" target="_blank"><img src="img/google-play-badge.svg" alt=""></a>
 <!--
                         <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
 -->
