--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>4 Pics 1 Word Puzzle game in Indian Languages:<br/><br/>Hindi, Telugu & Kannada</h1>
+                            <h1>4 Pics 1 Word Puzzle game in Indian Languages:<br/><br/>Hindi, Telugu, Kannada & Tamil</h1>
                             <a href="#download" class="btn btn-outline btn-xl page-scroll">Play Now for Free!</a>
                         </div>
                     </div>
